# kcm-snap

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  kcm_snap.cpp  kcm_snap.h  kcm_snap.json  kcmsnap.cpp  kcmsnap.h  snap_kcm.json  snap_plugs.cpp  snap_plugs.h  snapbackend.cpp  snapbackend.h  snappermissions.cpp  snappermissions.h
src/ui/: main.qml
